[package]
name = "tabi"
version = "0.1.0"
authors = ["adroitwhiz <adroitwhiz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
serde_json = "1.0"
num_enum = "0.5"
md5 = "0.7.0"
hex = "0.4.3"
winit = "0.24.0"
futures = "0.3.13"
wgpu = "0.9"
glam = "0.17.1"
env_logger = "0.8.4"
bytemuck = { version = "1.7", features = ["derive"] }
usvg = "0.15"
resvg = "0.15"
tiny-skia = "0.5"